# grainrx

./: .gitignore  CHANGELOG.md  FILM_PROFILE_CALIBRATION.md  FILM_RANGE_ANALYSIS.md  LICENSE  QA_SUMMARY.md  QA_TEST_PLAN.md  README.md  README_python_api_section.md  TEST_PLAN.md  TEST_RESULTS.md  ci.yml  comfyui_node_plan.md  compare_renderers.py  core_cli.py  grain_parameter_ranges.html  grainui.bat  grainui.sh  pyproject.toml  pytest.ini  render.py  requirements.txt  test_film_ranges.py  test_grain_ranges.py
.github/workflows/: ci.yml
core/: __init__.py  cli.py  profiles.py  renderer.py  rng.py
examples/: README.md
film_grain/: __init__.py  postprocess.py  profiles.py  renderer_fast.py
grainrx/film_grain/: __init__.py  renderer_fast.py
grainui/: app.py
grainui/static/: index.html
gui/: app.py
gui/static/: index.html
tests/: conftest.py  test_profiles.py  test_renderer_agreement.py  test_reproducibility.py
